css/index.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;900&display=swap');

html {
  font-family: 'Noto Sans JP', sans-serif;
}

.container {
  width: 100%;
  max-width: 1500px;
  margin: 0 auto 0 auto;
  display: flex;
  flex-wrap: wrap;
}

.me-section {
  flex: 2;
  background-color: blue;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.me-section > .profile-img-container {
  height: 150px;
  width: 150px;
  display: flex;
  justify-content: center;
  border: 3px solid white;
  border-radius: 75px;
  overflow: hidden;
  background-color: white;
  margin-top: 50px;
}

.me-section > .profile-img-container > img {
  height: 150px;
  width: auto;
}

.me-section > h4 {
  color: #fff;
  margin-top: 22px;
  font-size: 25px;
  font-weight: 900;
  text-align: center;
}

.me-section > h3 {
  color: #fff;
  margin-top: 10px;
  font-size: 25px;
  font-weight: 500;
}

.me-section > p {
  width: 74%;
  margin-top: 40px;
  color: #fff;
  font-size: 20px;
  padding-left: 10px;
  border-left: 3px solid orange;
}

.me-section > ul {
  display: flex;
  flex-direction: row;
}

.me-section > ul > li {
  margin: 10px;
}

.me-section > ul > li > a {
  color: #fff;
  font-size: 38px;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  font-size: 14px;
  width: 90px;
  top: 45px;
  left: -30px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.content-section {
  flex: 5;
  background-color: #f6f6f6;
}

.content-section > div > h1 {
  font-size: 35px;
  font-weight: 500;
  align-self: flex-start;
  margin-left: 20px;
  margin-top: 20px;
}

.projects-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project {
  width: 90%;
  display: flex;
  background-color: #fff;
  padding: 20px;
  margin-top: 20px;
}

.project > .project-info {
 margin-left: 10px; 
 display: flex;
 flex-direction: column;
 width: 100%;
}

.project > .project-info > h4 {
  font-size: 28px;
  font-weight: 900;
  padding-bottom: 10px;
}

.project > .project-info > ul {
  display: flex;
  font-size: 50px;
  margin-top: 10px;
  align-self: flex-end;
}

.project > .project-info > ul > li {
  margin-right: 10px;
}

.project > .project-info > p {
  font-size: 16px;
  line-height: 20px;
}

.project > .project-info > .buttons {
  margin-top: 20px;
  display: flex;
  justify-content: flex-end;
}

.project > .project-info > .buttons > a:nth-of-type(1) {
  margin-right: 15px;
}

.project > .project-info > .buttons > a > button:hover {
  cursor: pointer;
}

.project > .project-info > .buttons > a > button {
  height: 35px;
  border: none;
}

.project > .project-info > .buttons > a:nth-of-type(1) > button {
  background-color: purple;
  color: #fff;
}

.project > .project-info > .buttons > a:nth-of-type(2) > button {
  background-color: rgb(108, 233, 6);
  color: #fff;
}

.contactme-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 30px;
  margin-top: 30px;
}
.contactme-section > form {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 95%;
}
.contactme-section > form > div {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-top: 10px;
}

.contactme-section > form > div > label {
  font-size: 14px;
  margin-bottom: 4px;
  padding-left: 2px;
}

.contactme-section > form > input[type=submit] {
  width: 20%;
  margin-top: 10px;
  background-color: rgb(44, 147, 231);
  color: #fff;
  border: none;
  font-size: 20px;
  padding: 5px;
  cursor: pointer;
}

#message-container > textarea{
  resize: none;
  font-family: 'Noto Sans JP', sans-serif;
  font-size: 14px;
}

.layer1 {
	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
}

.layer2 {
	-webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
}

.layer3 {
	-webkit-box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
    box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
}

.layer4 {
	-webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

@media screen and (max-width: 787px) {
  .project {
    flex-direction: column;
  }

  .content-section {
    min-width: 395px;
  }

  .project > img {
    height: auto;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .me-section {
    min-width: 394px;
  }

  .contactme-section > form {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 95%;
  }
}

@media screen and (min-width: 788px) {
  .project > img {
    height: 200px;
    width: auto;
  }
  .me-section {
    min-width: 327px;
  }
}

@media screen and (min-width: 788px) and (max-width: 1145px) {
  .content-section {
    min-width: 800px;
  }
  .contactme-section > form {
    flex-direction: column;
    align-items: center;
  }
  .contactme-section > form > div {
    width: 90%;
  }
}

@media screen and (min-width: 1146px) {
  .content-section {
    max-height: 100vh;
    overflow-y: scroll;
  }
  #name-container {
    width: 49%;
  }

  #organization-container {
    width: 49%;
  }

  #email-container {
    width: 49%;
  }

  #subject-container {
    width: 49%;
  }

  #message-container {
    width: 98%;
  }
}

